fix upload file

--- a/app/template/backend/news/edit.html
+++ b/app/template/backend/news/edit.html
@@ -20,7 +20,7 @@
 	    font-weight: bold;
 	    font-style: italic;
 	}
-	
+
 	</style>
   </head>
   <%assign var='login_info' value=ACWSession::get('user_info')%>
@@ -58,18 +58,18 @@
 
             <div class="clearfix"></div>
 
-            <div class="row">              
+            <div class="row">
 			  <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
                     <h2>Thêm Tin </h2>
-                    
+
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
                     <div class="row">
                     	<div class="col-md-12 col-sm-12 col-xs-12">
-                
+
                   <div class="x_content">
                     <br />
                     <form id="form_ctg" action="" class="form-horizontal form-label-left" enctype="multipart/form-data">
@@ -77,8 +77,8 @@
                         <label class="control-label col-md-2 col-sm-2 col-xs-12" for="news_name">Tiêu đề tin<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="news_name" required="required" name="news_name" class="form-control col-md-7 col-xs-12" value="<%$news_name%>">                          
-                          <input type="hidden"  name="news_id" value="<%$news_id%>">                        
+                          <input type="text" id="news_name" required="required" name="news_name" class="form-control col-md-7 col-xs-12" value="<%$news_name%>">
+                          <input type="hidden"  name="news_id" value="<%$news_id%>">
                         </div>
                       </div>
                       <div class="form-group">
@@ -93,42 +93,42 @@
                           	 	<%else%>
                           	 		<option   value="<%$ctg.ctg_id%>" <%if $ctg.ctg_id == $ctg_id%>selected="selected"<%/if%>><%if $ctg.ctg_level == 2%>&nbsp;&nbsp;&nbsp;<%else if $ctg.ctg_level == 3%>&nbsp;&nbsp;&nbsp&nbsp;&nbsp<%/if%><%$ctg.ctg_name%></option>
                           	 	<%/if%>
-                          	 <%/foreach%>                          	 
-                          </select>                  
+                          	 <%/foreach%>
+                          </select>
                         </div>
                       </div>
-                      <div class="form-group">                        
+                      <div class="form-group">
                         <label class="control-label col-md-2 col-sm-2 col-xs-12" for="img_path">Hình Ảnh</label>
                         <div class="col-md-4 col-sm-4 col-xs-12">
-                          <input type="text" id="img_path" name="img_path" class="form-control col-md-7 col-xs-12" value="<%$img_path%>">                          
+                          <input type="text" id="img_path" name="img_path" class="form-control col-md-7 col-xs-12" value="<%$img_path%>">
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-12">
                         	<button class="btn btn-primary" type="button" id="btn_upload">Upload</button>
                         	<input  type="file" id="upload_file" style="display: none"/>
-                        	
+
                         </div>
-                      </div>                      
+                      </div>
                       <div class="form-group">
                         <label class="control-label col-md-2 col-sm-2 col-xs-12">Hiện/Ẩn</label>
                         <div class="col-md-2 col-sm-2 col-xs-12">
                           <select class="form-control" name="del_flg">
                           	 <option value="0" <%if $del_flg == 0%>selected="selected"<%/if%>>Hiện</option>
                           	 <option value="1" <%if $del_flg == 1%>selected="selected"<%/if%>>Ẩn</option>
-                          </select>                          
+                          </select>
                         </div>
-                      </div> 
-                      <div class="form-group">                        
+                      </div>
+                      <div class="form-group">
                         <label class="control-label col-md-2 col-sm-2 col-xs-12" for="img_path">Trích dẫn</label>
                         <div class="col-md-10 col-sm-10 col-xs-12">
-                          <textarea type="text" id="des" name="des" class="form-control col-md-7 col-xs-12" style="height:90px"><%$des%></textarea>                          
-                        </div>                        
+                          <textarea type="text" id="des" name="des" class="form-control col-md-7 col-xs-12" style="height:90px"><%$des%></textarea>
+                        </div>
                       </div>
-                      <div class="form-group">                        
+                      <div class="form-group">
                         <!--<label class="control-label col-md-2 col-sm-2 col-xs-12" for="ctg_name">Nội dung</label>-->
                         <div class="col-md-12 col-sm-12 col-xs-12">
                           <textarea  id="pro_content" name="content"><%$content%></textarea>
                         </div>
-                      </div>                    
+                      </div>
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-12 col-sm-12" style="text-align: center">
@@ -141,29 +141,29 @@
                 </div>
               </div>
                     </div>
-					
-                    
-                    
+
+
+
                     </div>
 					</div>
-					
+
                   </div>
                 </div>
               </div>
-            	
+
             </div>
          <!-- </div>-->
-        
+
         </div>
         <!-- /page content -->
-		
+
         <!-- footer content -->
         <%include 'include/footer.html'%>
         <!-- /footer content -->
-        
+
       </div>
     </div>
-	
+
 <script>
 	$(document).ready(function() {
 		$('#pro_content').froalaEditor({
@@ -171,9 +171,9 @@
 		language: 'vi',
 		imageUploadURL:"<%$smarty.const.ACW_BASE_URL%>phofile/upload"
 	  });
-		        
-        
-        $(document).off('blur','.number_format'); 
+
+
+        $(document).off('blur','.number_format');
         $(document).on('blur','.number_format',function(event){
         	var val = $(this).val();
         	if($.isNumeric( val) == false){
@@ -186,7 +186,7 @@
 		                    .replace(/\B(?=(\d{3})+(?!\d))/g, ",")
 		                    );
         });
-		$(document).off('click','#btn_save'); 
+		$(document).off('click','#btn_save');
         $(document).on('click','#btn_save',function(event){
         	var msg = check_validate_update();
         	if(msg !=""){
@@ -202,54 +202,54 @@
 				}else{
 					Pho_message_box_error("Lỗi",datas.msg);
 				}
-                
+
             });
         });
         var check_validate_update = function(){
         	if($('#news_name').val()==''){
         		return "Bạn chưa nhập tiêu đề tin !";
-        	} 
+        	}
         	if($('#ctg_id').val()==''){
         		return "Bạn chưa chọn danh mục !";
-        	} 
+        	}
         	if($('#img_path').val()==''){
         		return "Bạn chưa upload ảnh !";
-        	}      	
+        	}
         	return "";
         };
-        $(document).off('click','#btn_upload'); 
+        $(document).off('click','#btn_upload');
         $(document).on('click','#btn_upload',function(event){
         	$('#upload_file').click();
-        });	
-        $(document).off('change','#upload_file'); 
+        });
+        $(document).off('change','#upload_file');
         $(document).on('change','#upload_file',function(event){
         	var corractpath = $(this).val();
-        	//var filename = corractpath.replace(/^.*[\\\/]/, '')        	
-        	
+        	//var filename = corractpath.replace(/^.*[\\\/]/, '')
+
         	var file_data=$(this).prop("files")[0];
-        	//console.log(file_data);	
-        	var form_data=new FormData(this);
+        	//console.log(file_data);
+        	var form_data=new FormData();
             form_data.append("file",file_data);
             var base_url= "<%$smarty.const.ACW_BASE_URL_DATA%>";
-            //console.log(form_data);	
+            //console.log(form_data);
         	Pho_upload("<%$smarty.const.ACW_BASE_URL%>phofile/upload" ,form_data,function(datas){
 				//if(datas.status =="OK"){
 					 //console.log(datas);
-				var file_name = datas.link.replace(base_url,"");	
-				$('#img_path').val(file_name);				
+				var file_name = datas.link.replace(base_url,"");
+				$('#img_path').val(file_name);
 				//}else{
 					//Pho_message_box_error("Lỗi",datas.msg);
 				//}
-                
-            });
-        });	
 
-        
-		
+            });
+        });
+
+
+
     });
 </script>
-     
-    
-	
+
+
+
 </body>
 </html>
