--- a/app/template/backend/slides/edit.html
+++ b/app/template/backend/slides/edit.html
@@ -28,19 +28,19 @@
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <input type="text" id="img_path" required="required" name="img_path" class="form-control col-md-7 col-xs-12" value="<%$img_path%>">
-                          <input type="hidden"  name="slide_id" value="<%$slide_id%>" >  
-                          <input type="hidden"  name="banner_flg" value="<%$banner_flg%>" >                        
+                          <input type="hidden"  name="slide_id" value="<%$slide_id%>" >
+                          <input type="hidden"  name="banner_flg" value="<%$banner_flg%>" >
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-12">
                         	<button class="btn btn-primary" type="button" id="btn_upload">Upload</button>
                         	<input  type="file" id="upload_file" style="display: none"/>
-                        	
+
                         </div>
-                      </div>  
+                      </div>
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12"></label>
                         <div class="col-md-8 col-sm-8 col-xs-12">
-                          <img id="img_disp" class="img-rounded" width="500" height="200" <%if isset($img_path)%>src="<%$smarty.const.ACW_BASE_URL%><%$img_path%>"<%/if%>/>                         
+                          <img id="img_disp" class="img-rounded" width="500" height="200" <%if isset($img_path)%>src="<%$smarty.const.ACW_BASE_URL%><%$img_path%>"<%/if%>/>
                         </div>
                       </div>
                       <div class="form-group">
@@ -48,16 +48,16 @@
                         <div class="col-md-8 col-sm-8 col-xs-12">
                           <input type="text"  class="form-control" name="link_page" value="<%$link_page%>">
                         </div>
-                      </div> 
+                      </div>
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Hiện/Ẩn</label>
                         <div class="col-md-3 col-sm-3 col-xs-12">
                           <select class="form-control" name="del_flg">
                           	 <option value="0" <%if $del_flg == 0%>selected="selected"<%/if%>>Hiện</option>
                           	 <option value="1" <%if $del_flg == 1%>selected="selected"<%/if%>>Ẩn</option>
-                          </select>                          
+                          </select>
                         </div>
-                      </div>                      
+                      </div>
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3" style="text-align: center">
@@ -72,43 +72,43 @@
               </div>
            <!-- </div>-->
 <script>
-	
-	
+
+
 	$(document).ready(function() {
-		
-		
-		$(document).off('change','#page_flg'); 
+
+
+		$(document).off('change','#page_flg');
         $(document).on('change','#page_flg',function(event){
         	var val = $(this).val();
         	//change_option(val);
         });
-        $(document).off('click','#btn_upload'); 
+        $(document).off('click','#btn_upload');
         $(document).on('click','#btn_upload',function(event){
         	$('#upload_file').click();
-        });	
-        $(document).off('change','#upload_file'); 
+        });
+        $(document).off('change','#upload_file');
         $(document).on('change','#upload_file',function(event){
         	var corractpath = $(this).val();
-        	//var filename = corractpath.replace(/^.*[\\\/]/, '')        	
-        	
+        	//var filename = corractpath.replace(/^.*[\\\/]/, '')
+
         	var file_data=$(this).prop("files")[0];
-        	//console.log(file_data);	
-        	var form_data=new FormData(this);
+        	//console.log(file_data);
+        	var form_data=new FormData();
             form_data.append("file",file_data);
             var base_url= "<%$smarty.const.ACW_BASE_URL%>";
-            //console.log(form_data);	
+            //console.log(form_data);
         	Pho_upload("<%$smarty.const.ACW_BASE_URL%>phofile/uploadslides" ,form_data,function(datas){
 				//if(datas.status =="OK"){
 					 //console.log(datas);
-				var file_name = datas.link.replace(base_url,"");	
-				$('#img_path').val(file_name);	
-				$('#img_disp').attr('src',datas.link);			
+				var file_name = datas.link.replace(base_url,"");
+				$('#img_path').val(file_name);
+				$('#img_disp').attr('src',datas.link);
 				//}else{
 					//Pho_message_box_error("Lỗi",datas.msg);
 				//}
-                
+
             });
         });
 	});
-	
+
 </script>
